// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`水平布局 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-height: 24px;
  padding: 2px 12px;
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.66;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c0 .sinoui-form-item__content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .sinoui-helper-line {
  margin-bottom: 8px;
}

.c0 .sinoui-helper-line:empty {
  margin-bottom: 0;
}

.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.6);
  box-sizing: border-box;
  margin: 0px;
  margin-top: -2px;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  font-size: 0.75rem;
  padding-bottom: 4px;
}

@media screen and (min-width:600px) {
  .c0.sinoui-form-item--horizontal {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }

  .c0.sinoui-form-item--horizontal > .sinoui-form-item__content {
    -webkit-flex: 1 1 0%;
    -ms-flex: 1 1 0%;
    flex: 1 1 0%;
  }

  .c0.sinoui-form-item--horizontal > .sinoui-form-label {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    font-size: 16px;
    text-align: right;
    width: 160px;
    min-height: 40px;
    padding-top: 8px;
    padding-right: 8px;
    box-sizing: border-box;
  }

  .c0.sinoui-form-item--horizontal > .sinoui-form-label::after {
    content: ':';
  }
}

<div
  className="c0 sinoui-form-item sinoui-form-item--horizontal"
  data-testid="formcontrol"
>
  <label
    className="c1 sinoui-form-label sinoui-form-label--variant-standard sinoui-form-label--layout-standard"
    htmlFor="input_1"
  />
  <div
    className="sinoui-form-item__content"
  >
    <input />
    <div
      className="c2 sinoui-helper-line"
    />
  </div>
</div>
`;

exports[`水平布局FormLabel显示冒号 1`] = `
.c3 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.66;
  -webkit-letter-spacing: 0.03333em;
  -moz-letter-spacing: 0.03333em;
  -ms-letter-spacing: 0.03333em;
  letter-spacing: 0.03333em;
  color: #f44336;
  text-align: left;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-height: 24px;
  padding: 2px 12px;
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-size: 0.75rem;
  line-height: 1.66;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c0 .sinoui-form-item__content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .sinoui-helper-line {
  margin-bottom: 8px;
}

.c0 .sinoui-helper-line:empty {
  margin-bottom: 0;
}

.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: #f44336;
  box-sizing: border-box;
  margin: 0px;
  margin-top: -2px;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  font-size: 0.75rem;
  padding-bottom: 4px;
}

@media screen and (min-width:600px) {
  .c0.sinoui-form-item--horizontal {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }

  .c0.sinoui-form-item--horizontal > .sinoui-form-item__content {
    -webkit-flex: 1 1 0%;
    -ms-flex: 1 1 0%;
    flex: 1 1 0%;
  }

  .c0.sinoui-form-item--horizontal > .sinoui-form-label {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    font-size: 16px;
    text-align: right;
    width: 160px;
    min-height: 40px;
    padding-top: 8px;
    padding-right: 8px;
    box-sizing: border-box;
  }

  .c0.sinoui-form-item--horizontal > .sinoui-form-label::after {
    content: ':';
  }
}

<div
  className="c0 sinoui-form-item sinoui-form-item--horizontal"
  data-testid="formcontrol"
>
  <label
    className="c1 sinoui-form-label sinoui-form-label--variant-standard sinoui-form-label--layout-standard"
    htmlFor="input_1"
  >
    姓名
  </label>
  <div
    className="sinoui-form-item__content"
  >
    <input />
    <div
      className="c2 sinoui-helper-line"
    >
      <div
        className="c3 sinoui-helper-text"
      >
        必填
      </div>
    </div>
  </div>
</div>
`;
